[package]
name = "chela_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
# chela_query = { path = "../chela_query"}
# async-trait = "0.1.53"
# chela_query = { path = "../chela_query"}
# tokio-postgres = "0.7.6"

[lib]
proc-macro = true
