[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chela = { path = "../chela"}
chela_query = { path = "../chela_query"}
tokio-postgres = "0.7.6"
async-trait = "0.1.53"
itertools = "0.10.3"
